# Computer-engineer-project---HK242

./: .gitignore  README.md  Squareline.sll  Squareline.spj  ThesisReport.tex  main.tex  partitions.csv  platformio.ini  ref.bib
Others/: ThesisCover.tex  abstract.tex  commitment.tex  thankyou.tex
Relay-board/: README.md  partitions.csv  platformio.ini
Waveshare-ESP32-S3-Touch-LCD-7/: README.md  partitions.csv  (+1 more)
Waveshare-ESP32-S3-Touch-LCD-7/lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
Waveshare-ESP32-S3-Touch-LCD-7/lib/ui/src/fonts/: ui_font_font20.c  ui_font_font32.c  ui_font_font48.c
Waveshare-ESP32-S3-Touch-LCD-7/lib/ui/src/images/: ui_img_115668498.c  ui_img_1385603933.c  ui_img_1692275422.c
Waveshare-ESP32-S3-Touch-LCD-7/lib/ui/src/screens/: ui_BedoomSceen.c  ui_FirstScreen.c  ui_KitchenSceen.c  ui_SecondScreen.c  ui_bedRoom1Screen.c  ui_bedRoomScreen1.c  ui_bedRoomScreen2.c  ui_lvRoomScreen.c  ui_mainScreen.c
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
lib/ui/src/components/: ui_comp_hook.c
lib/ui/src/fonts/: ui_font_Font30.c  ui_font_font20.c  ui_font_font48.c
lib/ui/src/images/: ui_img_1056497580.c  ui_img_115668498.c  ui_img_1266183477.c  ui_img_1385603933.c  ui_img_hcmut_png.c
lib/ui/src/screens/: ui_BedoomSceen.c  ui_BedoomSceen.h  ui_FirstScreen.c  ui_Initial_Screen.c  ui_Initial_Screen.h  ui_KitchenSceen.c  ui_LVRoomScreen.h  ui_SetingWifi.c  ui_SetingWifi.h  ui_lvRoomScreen.c  ui_mainScreen.c  ui_mainScreen.h
(+64 files in other folders)
